[gd_scene load_steps=6 format=3 uid="uid://ddrywk1jny7yg"]

[ext_resource type="Script" uid="uid://bq2vjtoycd6k2" path="res://source/PlayState/PlayState.gd" id="1_b0ega"]
[ext_resource type="Script" uid="uid://xfdqhbnnhq6p" path="res://source/PlayState/NoteGroup.gd" id="2_xq65u"]
[ext_resource type="Script" uid="uid://pqmqd4ymy621" path="res://source/PlayState/StrumGroup.gd" id="3_l02w5"]
[ext_resource type="Texture2D" uid="uid://udqae1fkp73e" path="res://assets/images/stages/week1/stageback.png" id="5_4wsi4"]
[ext_resource type="PackedScene" uid="uid://duumxr33dyeeu" path="res://scenes/objects/Bar.tscn" id="5_paqu8"]

[node name="PlayState" type="Node2D"]
script = ExtResource("1_b0ega")

[node name="VoicesOpponent" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="VoicesPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="StrumGroup" type="Node" parent="UI"]
script = ExtResource("3_l02w5")

[node name="NoteGroup" type="Node" parent="UI"]
script = ExtResource("2_xq65u")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Stageback" type="Sprite2D" parent="UI/HUD"]
position = Vector2(670, 345)
scale = Vector2(0.576563, 0.632857)
texture = ExtResource("5_4wsi4")

[node name="HealthBar" parent="UI/HUD" instance=ExtResource("5_paqu8")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.5
offset_top = -169.0
offset_right = 300.5
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0
